feat: agregar nuevas funcionalidades para listar productos y proveedores, incluyendo paginación y búsqueda
