# src/api/schemas/index.ts
@@ -11,6 +11,7 @@ export * from './input';
 export * from './loginRequest';
 export * from './pagedPedido';
 export * from './pagedPedidoDetalle';
+export * from './pagedPedidoProveedorResumen';
 export * from './pagedProductoList';
 export * from './pagedProveedor';
 export * from './pagedUsuario';
@@ -19,6 +20,7 @@ export * from './pedidoApiListarMisPedidosHechosParams';
 export * from './pedidoApiListarMisPedidosRecibidosParams';
 export * from './pedidoApiListarPedidosParams';
 export * from './pedidoApiListarProductosPedidoPorProveedorParams';
+export * from './pedidoApiListarProveedoresResumenPorPedidoParams';
 export * from './pedidoCambiarEstado';
 export * from './pedidoCambiarEstadoEstado';
 export * from './pedidoCopiaItem';
@@ -33,6 +35,7 @@ export * from './pedidoUpdate';
 export * from './productoApiActualizarProductoBody';
 export * from './productoApiCrearProductoBody';
 export * from './productoApiListarProductosPorProveedorParams';
+export * from './productoApiListarProductosTodosParams';
 export * from './productoCreate';
 export * from './productoDetail';
 export * from './productoList';
